--- a/index.html
+++ b/index.html
@@ -1,55 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap 101 Template</title>
 
-    <title>Open Data Policy</title>
+  <!-- Bootstrap -->
+  <link href="css/bootstrap.css" rel="stylesheet">
+  <!--Stylesheet-->
+  <link href="css/main.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/main.css" rel="stylesheet">
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+</head>
+<body>
+<h1>Hello, world!</h1>
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <![endif]-->
-  </head>
+<h2>What is Open Data?</h2>
+  <div>
+  <p>Open Data is the practice of taking the data like databases, documents, records, transcripts, that is currently unavailable to the public and making it available in a standardized digital format so that it is easily available for everyone to use as resource for software applications and data visualizations.</p>
+  <a href="http://us-city.census.okfn.org/">Suggested data to release</a>
+  </div>
 
-  <body>
+  <div>
+    <h2>Why Miami-Dade from Open Data?</h2>
+    <ul>
+      <li>
+        <h3>PR Benefit</h3>
+        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">1</a></sup></p>
+      </li>
+      <li>
+        <h3>Efficiency Benefit</h3>
+        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
+      </li>
+      <li>
+        <h3>App Benefit</h3>
+        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
+      </li>
+     </ul>
+  </div>
 
-    <div>
-        <h1>What is Open Data?</div>
-        <p>Open Data is the practice of taking the data like databases, documents, records, transcripts, that is currently unavailable to the public and making it available in a standardized digital format so that it is easily available for everyone to use as resource for software applications and data visualizations.</p>
-        <a href="http://us-city.census.okfn.org/">Suggested data to release</a>
-    </div>
+  <div>
+    <ol>
+      <li>link to references for PR benefit</li>
+      <li>link to references for Efficiency benefit</li>
+      <li>link to references for App benefit</li>
+    </ol>
+  </div>
 
-    <div>
-        <h2>Why Miami-Dade from Open Data?</h2>
-        <ul>
-            <li>
-                <h3>PR Benefit</h3>
-                <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">1</a></sup></p>
-            </li>
-            <li>
-                <h3>Efficiency Benefit</h3>
-                <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
-            </li>
-            <li>
-                <h3>App Benefit</h3>
-                <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
-            </li>
-    </div>
 
-    <div>
-        <ol>
-            <li>link to references for PR benefit</li>
-            <li>link to references for Efficiency benefit</li>
-            <li>link to references for App benefit</li>
-        </ol>
-    </div>
 
-  </body>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.js"></script>
+</body>
 </html>
