--- a/index.html
+++ b/index.html
@@ -19,12 +19,65 @@
   <![endif]-->
 </head>
 <body>
-<h1>Hello, world!</h1>
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">MiamiAPI</a>
+    </div>
 
-<h2>What is Open Data?</h2>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link</a></li>
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+<div class="container">
+
+  <h2>What is Open Data?</h2>
   <div>
-  <p>Open Data is the practice of taking the data like databases, documents, records, transcripts, that is currently unavailable to the public and making it available in a standardized digital format so that it is easily available for everyone to use as resource for software applications and data visualizations.</p>
-  <a href="http://us-city.census.okfn.org/">Suggested data to release</a>
+    <p>Open Data is the practice of taking the data like databases, documents, records, transcripts, that is currently unavailable to the public and making it available in a standardized digital format so that it is easily available for everyone to use as resource for software applications and data visualizations.</p>
+    <a href="http://us-city.census.okfn.org/">Suggested data to release</a>
   </div>
 
   <div>
@@ -42,7 +95,7 @@
         <h3>App Benefit</h3>
         <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
       </li>
-     </ul>
+    </ul>
   </div>
 
   <div>
@@ -53,8 +106,39 @@
     </ol>
   </div>
 
+  <h2>What is Open Data?</h2>
+  <div>
+    <p>Open Data is the practice of taking the data like databases, documents, records, transcripts, that is currently unavailable to the public and making it available in a standardized digital format so that it is easily available for everyone to use as resource for software applications and data visualizations.</p>
+    <a href="http://us-city.census.okfn.org/">Suggested data to release</a>
+  </div>
 
+  <div>
+    <h2>Why Miami-Dade from Open Data?</h2>
+    <ul>
+      <li>
+        <h3>PR Benefit</h3>
+        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">1</a></sup></p>
+      </li>
+      <li>
+        <h3>Efficiency Benefit</h3>
+        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
+      </li>
+      <li>
+        <h3>App Benefit</h3>
+        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
+      </li>
+    </ul>
+  </div>
 
+  <div>
+    <ol>
+      <li>link to references for PR benefit</li>
+      <li>link to references for Efficiency benefit</li>
+      <li>link to references for App benefit</li>
+    </ol>
+  </div>
+
+</div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
