--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
 <body>
 <h1>Hello, world!</h1>
 
-<h2>What is Open Data?</h2>
+<h2><a href="http://www.codeforamerica.org/governments/capabilities/open-data/#intro">What is Open Data?</a></h2>
   <div>
-  <p>Open Data is the practice of taking the data like databases, documents, records, transcripts, that is currently unavailable to the public and making it available in a standardized digital format so that it is easily available for everyone to use as resource for software applications and data visualizations.</p>
+  <p>Open data refers to data (such as documents, databases, records, or transcripts, including those managed by outside vendors) released by a government or organization that is:</p>
+  <ul>
+    <li>freely available to be used, shared, and reused by anyone for any purpose, commercial or otherwise.</li>
+    <li>available in digital, machine-readable formats (such as .csv) so that it can be used in combination with other data and applications.</li>
+    <li>available in its entirety — and able to be downloaded “in bulk” and not just manually retrieved record-by-record.</li>
+  </ul>
   <a href="http://us-city.census.okfn.org/">Suggested data to release</a>
   </div>
 
@@ -46,11 +51,13 @@
   </div>
 
   <div>
-    <ol>
-      <li>link to references for PR benefit</li>
-      <li>link to references for Efficiency benefit</li>
+    <h3>Resources</h3>
+    <ul>
+      <li><a href="http://www.codeforamerica.org/governments/capabilities/open-data/">Code for America: Open Data Playbook</a></li>
+      <li><a href="http://sunlightfoundation.com/policy/local/">Sunlight Foundation: Local Open Data Policy site</a></li>
+      <li><a href="http://opendatahandbook.org/">Open Knowledge Foundation: Open Data Handbook</a></li>
       <li>link to references for App benefit</li>
-    </ol>
+    </ul>
   </div>
 
 
