--- a/index.html
+++ b/index.html
@@ -74,69 +74,61 @@
 </nav>
 <div class="container">
 
-  <h2>What is Open Data?</h2>
+  <h2><a href="http://www.codeforamerica.org/governments/capabilities/open-data/#intro">What is Open Data?</a></h2>
   <div>
-    <p>Open Data is the practice of taking the data like databases, documents, records, transcripts, that is currently unavailable to the public and making it available in a standardized digital format so that it is easily available for everyone to use as resource for software applications and data visualizations.</p>
+    <p>Open data refers to data (such as documents, databases, records, or transcripts, including those managed by outside vendors) released by a government or organization that is:</p>
+    <ul>
+      <li><strong>freely available</strong> to be used, shared, and reused by anyone for any purpose, commercial or otherwise.</li>
+      <li><strong>available in digital, machine-readable formats</strong> (such as .csv) so that it can be used in combination with other data and applications.</li>
+      <li><strong>available in its entirety</strong> — and able to be downloaded “in bulk” and not just manually retrieved record-by-record.</li>
+    </ul>
     <a href="http://us-city.census.okfn.org/">Suggested data to release</a>
   </div>
 
   <div>
-    <h2>Why Miami-Dade from Open Data?</h2>
+    <h2>Why does Miami-Dade need an Open Data Policy?</h2>
     <ul>
       <li>
-        <h3>PR Benefit</h3>
+        <h3>1. Transparency</h3>
         <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">1</a></sup></p>
       </li>
+
       <li>
-        <h3>Efficiency Benefit</h3>
+        <h3>2. Economic benefits</h3>
+        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
+      </li>
+      <li>
+        <h3>3. Efficiency</h3>
+        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
+      </li>
+      <li>
+        <h3>4. Service improvements</h3>
         <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
       </li>
       <li>
-        <h3>App Benefit</h3>
-        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
-      </li>
-    </ul>
-  </div>
-
-  <div>
-    <ol>
-      <li>link to references for PR benefit</li>
-      <li>link to references for Efficiency benefit</li>
-      <li>link to references for App benefit</li>
-    </ol>
-  </div>
-
-  <h2>What is Open Data?</h2>
-  <div>
-    <p>Open Data is the practice of taking the data like databases, documents, records, transcripts, that is currently unavailable to the public and making it available in a standardized digital format so that it is easily available for everyone to use as resource for software applications and data visualizations.</p>
-    <a href="http://us-city.census.okfn.org/">Suggested data to release</a>
-  </div>
-
-  <div>
-    <h2>Why Miami-Dade from Open Data?</h2>
-    <ul>
-      <li>
-        <h3>PR Benefit</h3>
-        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">1</a></sup></p>
-      </li>
-      <li>
-        <h3>Efficiency Benefit</h3>
+        <h3>5. Innovation</h3>
         <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
       </li>
-      <li>
-        <h3>App Benefit</h3>
-        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
-      </li>
+    </ul>
+  </div>
+  <div>
+    <h2>How much will it cost?</h2>
+    <p>
+  </div>
+  <div>
+    <h2>What are other examples of open data policies?</h2>
+    <p>http://sunlightfoundation.com/policy/local/
+  </div>
+  <div>
+    <h3>Additional Resources</h3>
+    <ul>
+      <li><a href="http://www.codeforamerica.org/governments/capabilities/open-data/">Code for America: Open Data Playbook</a></li>
+      <li><a href="http://sunlightfoundation.com/policy/local/">Sunlight Foundation: Local Open Data Policy site</a></li>
+      <li><a href="http://opendatahandbook.org/">Open Knowledge Foundation: Open Data Handbook</a></li>
+      <li><a href="http://www.socrata.com/open-data-field-guide/">Socrata Open Data Field Guide</a></li>
     </ul>
   </div>
 
-  <div>
-    <ol>
-      <li>link to references for PR benefit</li>
-      <li>link to references for Efficiency benefit</li>
-      <li>link to references for App benefit</li>
-    </ol>
-  </div>
 
 </div>
 
