--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap 101 Template</title>
+  <title>Miami Open Data Policy</title>
 
   <!-- Bootstrap -->
-  <link href="css/bootstrap.css" rel="stylesheet">
+  <!-- <link href="css/bootstrap.css" rel="stylesheet"> -->
   <!--Stylesheet-->
   <link href="css/main.css" rel="stylesheet">
 
@@ -17,64 +17,84 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+  <script src="//use.typekit.net/ywq1yli.js"></script>
+  <script>try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-<h1>Open Data Miami</h1>
+    <header class="hero">
+        <h1 class="logo">Open Data Miami</h1>
+    </header>
 
-<h2><a href="http://www.codeforamerica.org/governments/capabilities/open-data/#intro">What is Open Data?</a></h2>
-  <div>
-  <p>Open data refers to data (such as documents, databases, records, or transcripts, including those managed by outside vendors) released by a government or organization that is:</p>
-  <ul>
-    <li><strong>freely available</strong> to be used, shared, and reused by anyone for any purpose, commercial or otherwise.</li>
-    <li><strong>available in digital, machine-readable formats</strong> (such as .csv) so that it can be used in combination with other data and applications.</li>
-    <li><strong>available in its entirety</strong> — and able to be downloaded “in bulk” and not just manually retrieved record-by-record.</li>
-  </ul>
-  <a href="http://us-city.census.okfn.org/">Suggested data to release</a>
-  </div>
+    <div class="container">
+        <h2>
+            <a href="http://www.codeforamerica.org/governments/capabilities/open-data/#intro">What is Open Data?</a>
+        </h2>
+        <section>
+            <p>Open data refers to data (such as documents, databases, records, or transcripts, including those managed by outside vendors) released by a government or organization that is:</p>
+            <ul>
+                <li><strong>freely available</strong> to be used, shared, and reused by anyone for any purpose, commercial or otherwise.</li>
+                <li><strong>available in digital, machine-readable formats</strong> (such as .csv) so that it can be used in combination with other data and applications.</li>
+                <li><strong>available in its entirety</strong> — and able to be downloaded “in bulk” and not just manually retrieved record-by-record.</li>
+            </ul>
+            <a href="http://us-city.census.okfn.org/">Suggested data to release</a>
+        </section>
 
-  <div>
-    <h2>Why does Miami-Dade need an Open Data Policy?</h2>
-    <ul>
-      <li>
-        <h3>1. Transparency</h3>
-        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">1</a></sup></p>
-      </li>
+        <section>
+            <h2>Why does Miami-Dade need an Open Data Policy?</h2>
+            <ol>
+                <li>
+                    <h3>Transparency</h3>
+                    <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">1</a></sup></p>
+                </li>
 
-      <li>
-        <h3>2. Economic benefits</h3>
-        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
-      </li>
-      <li>
-        <h3>3. Efficiency</h3>
-        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
-      </li>
-      <li>
-        <h3>4. Service improvements</h3>
-        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
-      </li>
-      <li>
-        <h3>5. Innovation</h3>
-        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
-      </li>
-     </ul>
-  </div>
-    <div>
-    <h2>How much will it cost?</h2>
-    <p>
-  </div>
-  <div>
-    <h2>What are other examples of open data policies?</h2>
-    <p>http://sunlightfoundation.com/policy/local/
-  </div>
-  <div>
-    <h3>Additional Resources</h3>
-    <ul>
-      <li><a href="http://www.codeforamerica.org/governments/capabilities/open-data/">Code for America: Open Data Playbook</a></li>
-      <li><a href="http://sunlightfoundation.com/policy/local/">Sunlight Foundation: Local Open Data Policy site</a></li>
-      <li><a href="http://opendatahandbook.org/">Open Knowledge Foundation: Open Data Handbook</a></li>
-      <li><a href="http://www.socrata.com/open-data-field-guide/">Socrata Open Data Field Guide</a></li>
-    </ul>
-  </div>
+                <li>
+                    <h3>Economic benefits</h3>
+                    <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
+                </li>
+                <li>
+                    <h3>Efficiency</h3>
+                    <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
+                </li>
+                <li>
+                    <h3>Service improvements</h3>
+                    <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
+                </li>
+                <li>
+                    <h3>Innovation</h3>
+                    <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
+                </li>
+            </ol>
+        </section>
+
+        <section>
+            <h2>How much will it cost?</h2>
+            <p>
+        </section>
+
+        <section>
+            <h2>What are other examples of open data policies?</h2>
+            <p>http://sunlightfoundation.com/policy/local/
+        </section>
+
+        <section="resources">
+            <h3>Additional Resources</h3>
+            <ul>
+                <li>
+                    <a href="http://www.codeforamerica.org/governments/capabilities/open-data/">Code for America: Open Data Playbook</a>
+                </li>
+                <li>
+                    <a href="http://sunlightfoundation.com/policy/local/">Sunlight Foundation: Local Open Data Policy site</a>
+                </li>
+                <li>
+                    <a href="http://opendatahandbook.org/">Open Knowledge Foundation: Open Data Handbook</a>
+                </li>
+                <li>
+                    <a href="http://www.socrata.com/open-data-field-guide/">Socrata Open Data Field Guide</a>
+                </li>
+            </ul>
+        </section>
+
+    </div>
 
 
 
