--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
   </div>
     <div>
     <h2>How much will it cost?</h2>
-    <p>
+    <p>"There has been a range of budgeted numbers attached to legislation for funding open data efforts. Generally, anywhere from $0 (if no one is hired and no additional money is needed for technology) to $500,000 (for hiring new staff and adopting new technology) may be budgeted for city, state, or federal open data initiatives. Funding should be considered for—but not limited to—the potential of new staff (administrative, technical and legal), new software (to house, extract and input data), training, and server maintenance. It will be important for each jurisdiction to consider what it needs to support a strong open data ecosystem."</p>
+    <p><em>&#8212;From Sunlight Foundation<em></p>
   </div>
   <div>
     <h2>What are other examples of open data policies?</h2>
