added sidebar and related styles

--- a/index.html
+++ b/index.html
@@ -73,61 +73,217 @@
   </div><!-- /.container-fluid -->
 </nav>
 <div class="container">
+    <div class="col-md-3">
+      <div class="sidebar hidden-print hidden-xs hidden-sm affix-top" role="complementary">
+        <ul class="nav sidenav">
+          <li class="active">
+            <a href="#whatisopendata">What Is Open Data?</a>
+            <ul class="nav">
+              <li class=""><a href="#glyphicons-glyphs">Available glyphs</a></li>
+              <li class=""><a href="#glyphicons-how-to-use">How to use</a></li>
+              <li class=""><a href="#glyphicons-examples">Examples</a></li>
+            </ul>
+          </li>
+          <li class="">
+            <a href="#dropdowns">Dropdowns</a>
+            <ul class="nav">
+              <li class=""><a href="#dropdowns-example">Example</a></li>
+              <li><a href="#dropdowns-alignment">Alignment options</a></li>
+              <li><a href="#dropdowns-headers">Headers</a></li>
+              <li><a href="#dropdowns-disabled">Disabled menu items</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#btn-groups">Button groups</a>
+            <ul class="nav">
+              <li><a href="#btn-groups-single">Basic example</a></li>
+              <li><a href="#btn-groups-toolbar">Button toolbar</a></li>
+              <li><a href="#btn-groups-sizing">Sizing</a></li>
+              <li><a href="#btn-groups-nested">Nesting</a></li>
+              <li><a href="#btn-groups-vertical">Vertical variation</a></li>
+              <li><a href="#btn-groups-justified">Justified link variation</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#btn-dropdowns">Button dropdowns</a>
+            <ul class="nav">
+              <li><a href="#btn-dropdowns-single">Single button dropdowns</a></li>
+              <li><a href="#btn-dropdowns-split">Split button dropdowns</a></li>
+              <li><a href="#btn-dropdowns-sizing">Sizing</a></li>
+              <li><a href="#btn-dropdowns-dropup">Dropup variation</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#input-groups">Input groups</a>
+            <ul class="nav">
+              <li><a href="#input-groups-basic">Basic example</a></li>
+              <li><a href="#input-groups-sizing">Sizing</a></li>
+              <li><a href="#input-groups-checkboxes-radios">Checkbox and radios addons</a></li>
+              <li><a href="#input-groups-buttons">Button addons</a></li>
+              <li><a href="#input-groups-buttons-dropdowns">Buttons with dropdowns</a></li>
+              <li><a href="#input-groups-buttons-segmented">Segmented buttons</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#nav">Navs</a>
+            <ul class="nav">
+              <li><a href="#nav-tabs">Tabs</a></li>
+              <li><a href="#nav-pills">Pills</a></li>
+              <li><a href="#nav-justified">Justified nav</a></li>
+              <li><a href="#nav-disabled-links">Disabled links</a></li>
+              <li><a href="#nav-dropdowns">Using dropdowns</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#navbar">Navbar</a>
+            <ul class="nav">
+              <li><a href="#navbar-default">Default navbar</a></li>
+              <li><a href="#navbar-brand-image">Brand image</a></li>
+              <li><a href="#navbar-forms">Forms</a></li>
+              <li><a href="#navbar-buttons">Buttons</a></li>
+              <li><a href="#navbar-text">Text</a></li>
+              <li><a href="#navbar-links">Non-nav links</a></li>
+              <li><a href="#navbar-component-alignment">Component alignment</a></li>
+              <li><a href="#navbar-fixed-top">Fixed to top</a></li>
+              <li><a href="#navbar-fixed-bottom">Fixed to bottom</a></li>
+              <li><a href="#navbar-static-top">Static top</a></li>
+              <li><a href="#navbar-inverted">Inverted navbar</a></li>
+            </ul>
+          </li>
+          <li><a href="#breadcrumbs">Breadcrumbs</a></li>
+          <li>
+            <a href="#pagination">Pagination</a>
+            <ul class="nav">
+              <li><a href="#pagination-default">Default pagination</a></li>
+              <li><a href="#pagination-pager">Pager</a></li>
+            </ul>
+          </li>
+          <li><a href="#labels">Labels</a></li>
+          <li><a href="#badges">Badges</a></li>
+          <li><a href="#jumbotron">Jumbotron</a></li>
+          <li><a href="#page-header">Page header</a></li>
+          <li>
+            <a href="#thumbnails">Thumbnails</a>
+            <ul class="nav">
+              <li><a href="#thumbnails-default">Default example</a></li>
+              <li><a href="#thumbnails-custom-content">Custom content</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#alerts">Alerts</a>
+            <ul class="nav">
+              <li><a href="#alerts-examples">Examples</a></li>
+              <li><a href="#alerts-dismissible">Dismissible alerts</a></li>
+              <li><a href="#alerts-links">Links in alerts</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#progress">Progress bars</a>
+            <ul class="nav">
+              <li><a href="#progress-basic">Basic example</a></li>
+              <li><a href="#progress-label">With label</a></li>
+              <li><a href="#progress-low-percentages">Low percentages</a></li>
+              <li><a href="#progress-alternatives">Contextual alternatives</a></li>
+              <li><a href="#progress-striped">Striped</a></li>
+              <li><a href="#progress-animated">Animated</a></li>
+              <li><a href="#progress-stacked">Stacked</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#media">Media object</a>
+            <ul class="nav">
+              <li><a href="#media-default">Default media</a></li>
+              <li><a href="#media-list">Media list</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#list-group">List group</a>
+            <ul class="nav">
+              <li><a href="#list-group-basic">Basic example</a></li>
+              <li><a href="#list-group-badges">Badges</a></li>
+              <li><a href="#list-group-linked">Linked items</a></li>
+              <li><a href="#list-group-disabled">Disabled items</a></li>
+              <li><a href="#list-group-contextual-classes">Contextual classes</a></li>
+              <li><a href="#list-group-custom-content">Custom content</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#panels">Panels</a>
+            <ul class="nav">
+              <li><a href="#panels-basic">Basic example</a></li>
+              <li><a href="#panels-heading">Panel with heading</a></li>
+              <li><a href="#panels-alternatives">Contextual alternatives</a></li>
+              <li><a href="#panels-tables">With tables</a>
+              </li><li><a href="#panels-list-group">With list groups</a>
+            </li></ul>
+          </li>
+          <li><a href="#responsive-embed">Responsive embed</a></li>
+          <li><a href="#wells">Wells</a></li>
 
-  <h2><a href="http://www.codeforamerica.org/governments/capabilities/open-data/#intro">What is Open Data?</a></h2>
-  <div>
-    <p>Open data refers to data (such as documents, databases, records, or transcripts, including those managed by outside vendors) released by a government or organization that is:</p>
-    <ul>
-      <li><strong>freely available</strong> to be used, shared, and reused by anyone for any purpose, commercial or otherwise.</li>
-      <li><strong>available in digital, machine-readable formats</strong> (such as .csv) so that it can be used in combination with other data and applications.</li>
-      <li><strong>available in its entirety</strong> — and able to be downloaded “in bulk” and not just manually retrieved record-by-record.</li>
-    </ul>
-    <a href="http://us-city.census.okfn.org/">Suggested data to release</a>
-  </div>
 
-  <div>
-    <h2>Why does Miami-Dade need an Open Data Policy?</h2>
-    <ul>
-      <li>
-        <h3>1. Transparency</h3>
-        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">1</a></sup></p>
-      </li>
+        </ul>
+        <a class="back-to-top" href="#top">
+          Back to top
+        </a>
 
-      <li>
-        <h3>2. Economic benefits</h3>
-        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
-      </li>
-      <li>
-        <h3>3. Efficiency</h3>
-        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
-      </li>
-      <li>
-        <h3>4. Service improvements</h3>
-        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
-      </li>
-      <li>
-        <h3>5. Innovation</h3>
-        <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
-      </li>
-    </ul>
-  </div>
-  <div>
-    <h2>How much will it cost?</h2>
-    <p>
-  </div>
-  <div>
-    <h2>What are other examples of open data policies?</h2>
-    <p>http://sunlightfoundation.com/policy/local/
-  </div>
-  <div>
-    <h3>Additional Resources</h3>
-    <ul>
-      <li><a href="http://www.codeforamerica.org/governments/capabilities/open-data/">Code for America: Open Data Playbook</a></li>
-      <li><a href="http://sunlightfoundation.com/policy/local/">Sunlight Foundation: Local Open Data Policy site</a></li>
-      <li><a href="http://opendatahandbook.org/">Open Knowledge Foundation: Open Data Handbook</a></li>
-      <li><a href="http://www.socrata.com/open-data-field-guide/">Socrata Open Data Field Guide</a></li>
-    </ul>
-  </div>
+      </div>
+    </div>
+  <div class="col-md-9">
+   <h2 id="whatisopendata"><a href="http://www.codeforamerica.org/governments/capabilities/open-data/#intro">What is Open Data?</a></h2>
+   <div>
+     <p>Open data refers to data (such as documents, databases, records, or transcripts, including those managed by outside vendors) released by a government or organization that is:</p>
+     <ul>
+       <li><strong>freely available</strong> to be used, shared, and reused by anyone for any purpose, commercial or otherwise.</li>
+       <li><strong>available in digital, machine-readable formats</strong> (such as .csv) so that it can be used in combination with other data and applications.</li>
+       <li><strong>available in its entirety</strong> — and able to be downloaded “in bulk” and not just manually retrieved record-by-record.</li>
+     </ul>
+     <a href="http://us-city.census.okfn.org/">Suggested data to release</a>
+   </div>
+
+   <div>
+     <h2>Why does Miami-Dade need an Open Data Policy?</h2>
+     <ul>
+       <li>
+         <h3>1. Transparency</h3>
+         <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">1</a></sup></p>
+       </li>
+
+       <li>
+         <h3>2. Economic benefits</h3>
+         <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
+       </li>
+       <li>
+         <h3>3. Efficiency</h3>
+         <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
+       </li>
+       <li>
+         <h3>4. Service improvements</h3>
+         <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
+       </li>
+       <li>
+         <h3>5. Innovation</h3>
+         <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
+       </li>
+     </ul>
+   </div>
+   <div>
+     <h2>How much will it cost?</h2>
+     <p>
+   </div>
+   <div>
+     <h2>What are other examples of open data policies?</h2>
+     <p>http://sunlightfoundation.com/policy/local/
+   </div>
+   <div>
+     <h3>Additional Resources</h3>
+     <ul>
+       <li><a href="http://www.codeforamerica.org/governments/capabilities/open-data/">Code for America: Open Data Playbook</a></li>
+       <li><a href="http://sunlightfoundation.com/policy/local/">Sunlight Foundation: Local Open Data Policy site</a></li>
+       <li><a href="http://opendatahandbook.org/">Open Knowledge Foundation: Open Data Handbook</a></li>
+       <li><a href="http://www.socrata.com/open-data-field-guide/">Socrata Open Data Field Guide</a></li>
+     </ul>
+   </div>
+ </div>
 
 
 </div>
@@ -136,5 +292,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
