--- a/index.html
+++ b/index.html
@@ -127,37 +127,76 @@
         <li><strong>available in digital, machine-readable formats</strong> (such as json) so that it can be used in combination with other data and applications.</li>
         <li><strong>available in its entirety</strong> — and able to be downloaded “in bulk” and not just manually retrieved record-by-record.</li>
       </ul>
-      <a href="http://us-city.census.okfn.org/">Suggested data to release</a>
+
     </section>
 
     <section>
       <h2 id="whyopendata">Why does Miami-Dade need an Open Data Policy?</h2>
-      <ol>
+      <p>Information about our county and cities are our governments' greatest public assets. While Miami-Dade County and many municipalities <a href="http://us-city.census.okfn.org/">have significant data available,</a> we lag behind many other counties and cities of our size in overall availabilty of data and frequency at which those data are updated. We also lack a centralized data repository for easy access to our data. Adopting a formal open data policy is the first step toward making local government information accessible and easy-to-use and the only way we might consistently leverage the benefits of a true open data ecosystem, despite political change.</p>
+      <h3>Benefits of Open Data</h3> 
+      <ul>
         <li>
-          <h3>Transparency</h3>
-          <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">1</a></sup></p>
+          <h4>Transparency &amp; Accountability</h4>
+          <p>Having formal policies and processes in place to release open data can help residents better understand important civic issues in their communities, including spending, economic development, services, energy, transit, infrastructure and crime. Formal guidelines can also better <a href="http://sunlightfoundation.com/policy/opendatafaq/#safeguard">safeguard sensitive information about individuals</a> over the long-term.</p> 
+          <p><strong>Examples:</p>
+          <ul>
+            <li><a href="http://hbswk.hbs.edu/item/7393.html">Boston: Increasing Trust Between Government and Residents</a>
+            <li><a href="http://chicagocouncilmatic.org/">Chicago: Tracking City Council Activity</a></li>
+            <li><a href="http://beyondtransparency.org/chapters/part-4/beyond-open-data-the-data-driven-city/"> New York City: Targeting Illegal Building Conversions Inspections</a>  
+            <li><a href="http://sanfrancisco.crimespotting.org/">San Francisco: Mapping crime</a></li>
+          </ul>
+          <sup><a href="#">1</a></sup></p>
         </li>
         <li>
-          <h3>Economic benefits</h3>
-          <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
+          <h4>Efficiency &amp; Service improvements</h4>
+          <p>Open data allows different departments in a government as well as residents to monitor trends and needs more quickly and effectively, decreasing costs and improving core services.</p> 
+          <p><strong>Examples:</p>
+          <ul>
+            <li><a href="http://www.baltimorecity.gov/311-services">Baltimore: Tracking and reporting 311 requests</a></li>
+            <li><a href="http://opencounter.cityofsantacruz.com/applicants/sign_in"> Santa Cruz: Making permitting easier for business owners</a></li>
+            <li><a href="http://www.codeforamerica.org/peer-network-training/03-20-2014/Oakland: Streamlining Public Information Requests">Oakland: Streamlining public information requests</a></li>
+            <li><a href="http://blightstatus.nola.gov/">New Orleans: Monitoring and reporting blight</a></li>  
+            <li><a href="http://www.smc-connect.org/">San Mateo County: Aggregating community services</a></li>
+          </ul>
         </li>
         <li>
-          <h3>Efficiency</h3>
-          <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">3</a></sup></p>
+          <h4>Innovation &amp; Economic Development</h4>
+          <p>Open data provides valuable information to our thriving industries that can propel Miami forward as a leader in both civic innovation and business.</p> 
+          <p><strong>Examples:</p>
+          <ul>
+
+            <li><a href="http://www.opendata500.com/"> The Open Data 500: Top U.S. companies built on open data</a></li>
+            <li> <a href="http://www.trulia.com/">Trulia: Giving buyers, sellers and renters better tools to find a home</a></li>
+            <li><a href="http://smartprocure.us/">SmartProcure: Connecting businesses and government to improve procurement</a></li> 
+            <li><a href="http://en.seeclickfix.com/">SeeClickFix: Streamlining and leveraging 311 data</a></li>
+          </ul>
         </li>
-        <li>
-          <h3>Service improvements</h3>
-          <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
-        </li>
-        <li>
-          <h3>Innovation</h3>
-          <p>I now issue a new commandment: thou shalt do the dance. i did the same thing to gandhi, he didn't eat for three weeks. mister wayne, if you don't want to tell me exactly what you're doing, when i'm asked, i don't have to lie.<sup><a href="#">2</a></sup></p>
-        </li>
-      </ol>
+      </ul>
     </section>
 
+    <section>
+      <h2>What are other examples of open data policies?</h2>
+      <p>http://sunlightfoundation.com/policy/local/
+    </section>
+    <section>
+      <h2>How much will it cost?</h2>
+      <p>"There has been a range of budgeted numbers attached to legislation for funding open data efforts. Generally, anywhere from $0 (if no one is hired and no additional money is needed for technology) to $500,000 (for hiring new staff and adopting new technology) may be budgeted for city, state, or federal open data initiatives. Funding should be considered for—but not limited to—the potential of new staff (administrative, technical and legal), new software (to house, extract and input data), training, and server maintenance. It will be important for each jurisdiction to consider what it needs to support a strong open data ecosystem."</p>
+      <p><em><a href="http://sunlightfoundation.com/policy/opendatafaq/#cost">&#8212;From Sunlight Foundation Open Data FAQ</a></em></p>
+    </section>
+    <section="resources">
+      <h3>Additional Resources</h3>
+      <ul>
+        <li><a href="http://www.codeforamerica.org/governments/capabilities/open-data/">Code for America: Open Data Playbook</a></li>
+        <li><a href="http://sunlightfoundation.com/policy/local/">Sunlight Foundation: Local Open Data Policy</a></li>
+        <li><a href="http://project-open-data.github.io/">Project Open Data: White House Open Data Policy Guide</a></li>
+        <li><a href="http://opendatahandbook.org/">Open Knowledge Foundation: Open Data Handbook</a></li>
+        <li><a href="https://usodi.org/">U.S. Open Data Institute</a>
+        <li><a href="http://www.socrata.com/open-data-field-guide/">Socrata Open Data Field Guide</a></li>
+        
+      </ul>
+    </section>
     <section class="petition">
-      <h3>Would you like your Government to be more Open?</h3>
+      <h3>Do you support open data in Miami?</h3>
       <div>
         <a href="#" class="petition-yes">Yes.</a>
         <a href="#" class="petition-no">Not yet.</a>
@@ -166,27 +205,15 @@
         <input type="text" placeholder="full name" class="input-name"><input type="text" placeholder="email address" class="input-email"><button type="submit">Sign</button>
       </form>
     </section>
-
-    <section>
-      <h2>How much will it cost?</h2>
-      <p>"There has been a range of budgeted numbers attached to legislation for funding open data efforts. Generally, anywhere from $0 (if no one is hired and no additional money is needed for technology) to $500,000 (for hiring new staff and adopting new technology) may be budgeted for city, state, or federal open data initiatives. Funding should be considered for—but not limited to—the potential of new staff (administrative, technical and legal), new software (to house, extract and input data), training, and server maintenance. It will be important for each jurisdiction to consider what it needs to support a strong open data ecosystem."</p>
-      <p><em>&#8212;From Sunlight Foundation</em></p>
-    </section>
-
-    <section>
-      <h2>What are other examples of open data policies?</h2>
-      <p>http://sunlightfoundation.com/policy/local/
-    </section>
-
-    <section="resources">
-      <h3>Additional Resources</h3>
+    <!--<section="supporters">
+      <h3>Supporters</h3>
       <ul>
         <li><a href="http://www.codeforamerica.org/governments/capabilities/open-data/">Code for America: Open Data Playbook</a></li>
-        <li><a href="http://sunlightfoundation.com/policy/local/">Sunlight Foundation: Local Open Data Policy site</a></li>
+        <li><a href="http://sunlightfoundation.com/policy/local/">Sunlight Foundation: Local Open Data Policy guide</a></li>
         <li><a href="http://opendatahandbook.org/">Open Knowledge Foundation: Open Data Handbook</a></li>
         <li><a href="http://www.socrata.com/open-data-field-guide/">Socrata Open Data Field Guide</a></li>
       </ul>
-    </section>
+    </section>-->
   </div>
 
 </div>
