--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <section>
       <h2 id="whyopendata">Why does Miami-Dade need an Open Data Policy?</h2>
-      <p>Information about our county and cities are our governments' greatest public assets. While Miami-Dade County and many municipalities <a href="http://us-city.census.okfn.org/">have significant data available,</a> we lag behind many other counties and cities of our size in overall availabilty of data and frequency at which those data are updated. We also lack a centralized data repository for easy access to our data. Adopting a formal open data policy is the first step toward making local government information accessible and easy-to-use and the only way we might consistently leverage the benefits of a true open data ecosystem, despite political change.</p>
+      <p>Information about our county and cities are our governments' greatest public assets. While Miami-Dade County and many municipalities <a href="http://us-city.census.okfn.org/">have significant data available,</a> we lag behind many other counties and cities of our size in overall availabilty of data and frequency at which those data are updated. We also lack a centralized data repository for easy access to our data. Adopting a formal open data policy is the first step toward making local government information accessible and easy-to-use and the only way we might consistently leverage the benefits of a true open data ecosystem.</p>
       <h3>Benefits of Open Data</h3> 
       <ul>
         <li>
